# eu-energy-imports-pipeline

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
dashboard/metabase/: dashboard_setub.md  setup.md
docs/ingestion/: ingestion_layer.md
docs/orchestration/: orchestration_layer.md
docs/processing/: processing_layer.md  run_processing_spark.md
docs/project/: how_to_run.md  infrastructure.md  overview.md  project_structure.md
docs/structure/: project_structure.md
docs/transformation/: transformation_layer.md
ingestion/: ingestion_data_carl.py  run_ingestion.py
ingestion/comext/config/: datasets.py
ingestion/comext/extract/: download_gas_data.py  download_oil_data.py  extract_comext_constraint.py
ingestion/eurostat/config/: datasets.py  download_dimensions.py
ingestion/eurostat/extract/: download_electricity_data.py  download_gas_data.py  download_oil_data.py
orchestration/kestra/: Dockerfile.kestra  Dockerfile.runner
orchestration/kestra/config/: application.yml
orchestration/kestra/flows/: eu_energy_pipeline.yml
processing/: run_processing.py
processing/spark/: Dockerfile.spark-client  run_processing.py
processing/spark/jobs/: processing_comext_data_gas.py  processing_comext_data_oil.py  processing_data.py  run_processing_job.py
processing/spark/notebook/: processing_data_gas.ipynb  processing_data_oil.ipynb
transformation/: run_transformation.py
transformation/dbt/: .user.yml  profiles.yml
transformation/loaders/: postgres_loader.py
(+42 files in other folders)
