[project]
name = "eu-energy-imports-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.5.4",
    "pandas>=3.0.1",
    "psycopg-binary>=3.3.3",
    "psycopg[binary]>=3.3.3",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
]
